<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.nemesis.ninder.fragment.TabShipping"
    android:focusableInTouchMode="true"
    android:focusable="true">
    <include
        android:id="@+id/progressBar"
        layout="@layout/progress_bar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/mShippingView"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.AppCompatButton
            android:text="@string/button_save_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:textColor="@color/white"
            android:elevation="10dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:textSize="22sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/button_save_details" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button_save_details"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_first_name"
            android:inputType="textPersonName"
            android:hint="@string/hint_first_name" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_surname"
            android:inputType="textPersonName"
            android:hint="@string/hint_surname" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_address_line_1"
            android:inputType="textPostalAddress"
            android:hint="@string/hint_address_line_1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_address_line_2"
            android:inputType="textPostalAddress"
            android:hint="@string/hint_address_line_2" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_town_city"
            android:inputType="textPostalAddress"
            android:hint="@string/hint_town_city" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_state_country"
            android:inputType="textAutoComplete"
            android:imeOptions="actionNext"
            android:hint="@string/hint_state_country" />
        <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/field_state_country"-->
            <!--android:hint="@string/hint_state_country"-->
            <!--style="@style/AppTheme"/>-->
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/field_zipcode"
                android:inputType="textPostalAddress"
                android:hint="@string/hint_zipcode" />
        </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/field_phone"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:hint="@string/hint_phone" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</FrameLayout>
