<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.nemesis.ninder.fragment.TabPayment"
    android:focusableInTouchMode="true"
    android:focusable="true">
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_panel"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">
    <android.support.v7.widget.AppCompatButton
        android:text="@string/button_save_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:elevation="10dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textSize="22sp"
        android:layout_gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_save_details" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_save_details"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/field_current_password"
                android:inputType="textPassword"
                android:hint="@string/hint_current_password" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/field_new_password"
                android:inputType="textPassword"
                android:hint="@string/hint_new_password" />
            </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/field_confirm_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/hint_confirm_password" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_x2"
            android:layout_marginBottom="@dimen/text_view_margin"
            android:text="@string/label_policies"
            android:textAllCaps="true" />
            <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_privacy"
            android:text="@string/button_privacy"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_terms"
            android:text="@string/button_terms"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_returns"
            android:text="@string/button_returns"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"/>
    </LinearLayout>
    </ScrollView>

    </RelativeLayout>

</FrameLayout>
