<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="io.nemesis.ninder.activity.LoginActivity"
    android:background="@drawable/login_background"
    >

    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:src="@drawable/login_shadow"-->
    <!--android:scaleType="fitXY"/>-->

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_margin="50dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:padding="12dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:backgroundTint="@android:color/white"
                android:maxLines="1" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:padding="12dp"
                android:backgroundTint="@android:color/white"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_log_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"/>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_button"
                android:text="@string/action_log_in"
                android:textColor="@color/white" />
            <Button
                android:id="@+id/forgot_password_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="30dp"
                android:background="@null"
                android:textAlignment="center"
                android:text="@string/action_forgot_password"
                android:textSize="15sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
